--- a/MarioMissilAttack/instrucoes.html
+++ b/MarioMissilAttack/instrucoes.html
@@ -2,22 +2,22 @@
             <section>
                 <h2>Objetivo do Jogo</h2>
                 <p>
-                    O jogo tem como objetivo controlar o personagem <b>Mario Voador</b> para explodir os inimigos e pegar itens acumulando assim pontos que ao termino do jogo poder· ficar registrado no rank caso seja maior que a pontuaÁ„o existente.
+                    O jogo tem como objetivo controlar o personagem <b>Mario Voador</b> para explodir os inimigos e pegar itens acumulando assim pontos que ao termino do jogo poder√° ficar registrado no rank caso seja maior que a pontua√ß√£o existente.
                 </p>
             </section>
             <section>
-                <h2>InÌcio do Jogo</h2>
+                <h2>In√≠cio do Jogo</h2>
                 <p>
-                    O jogo inicia-se no <b>nivel 1</b>, o jogador possui 2 <b>vidas</b> e uma <b>estrela</b>. Os projeteis disparados estaram no nÌvel 1 e a quantidade tambÈm ser· de 1 projÈtil por vez.
+                    O jogo inicia-se no <b>nivel 1</b>, o jogador possui 2 <b>vidas</b> e uma <b>estrela</b>. Os projeteis disparados estaram no n√≠vel 1 e a quantidade tamb√©m ser√° de 1 proj√©til por vez.
                 </p>
             </section>
             <section>
-                <h2>InstruÁıes</h2>
+                <h2>Instru√ß√µes</h2>
                 <p>
-                    Movimente o personagem <b>Mario Voador</b> pela tela do jogo desviando dos inimigos e lanÁando projÈteis que faram com que os inimigos explodam recebendo assim pontos e itens.</br>
-                    Ao encostar em um <b>inimigo</b> ser· perdido uma <b>vida</b>. A perda de todas causar· o fim do jogo.</br>
+                    Movimente o personagem <b>Mario Voador</b> pela tela do jogo desviando dos inimigos e lan√ßando proj√©teis que faram com que os inimigos explodam recebendo assim pontos e itens.</br>
+                    Ao encostar em um <b>inimigo</b> ser√° perdido uma <b>vida</b>. A perda de todas causar√° o fim do jogo.</br>
                     Para pegar um <b>item</b> basta encostar nele com o personagem.</br>
-                    Conforme acumula-se pontos passa-se de <b>nÌvel</b>.
+                    Conforme acumula-se pontos passa-se de <b>n√≠vel</b>.
                 </p>
             </section>
             <section>
@@ -29,8 +29,8 @@
             <section>
                 <h2>Controles</h2>
                 <p>
-                    <b>Teclas de DireÁ„o - cima, baixo, esquerda e direita:</b> Move o personagem para cima, baixo esquerda e direita respectivamente. </br>
-                    <b>Tecla Barra de EspaÁo:</b> Faz com que o personagem lance um ou mais projeteis. </br>
+                    <b>Teclas de Dire√ß√£o - cima, baixo, esquerda e direita:</b> Move o personagem para cima, baixo esquerda e direita respectivamente. </br>
+                    <b>Tecla Barra de Espa√ßo:</b> Faz com que o personagem lance um ou mais projeteis. </br>
                     <b>Tecla Shift:</b> Faz uso do item <b>estrela</b> que explode todos os inimigos destrutiveis na tela.
                 </p>
             </section>
@@ -39,29 +39,29 @@
 
                 <img src="img/tartaruga-vermelha.png" />
                 <p>
-                    <b>Tartaruga Vermelha:</b> … necess·rio 2 projeteis para destruir este inimigo. Ganha-se 200 pontos ao explodi-la. Surge em uma posiÁ„o vertical aleatÛria e seu movimento È constante para a esquerda. Entra no jogo a partir do <b>nÌvel 1</b>.
+                    <b>Tartaruga Vermelha:</b> √â necess√°rio 2 projeteis para destruir este inimigo. Ganha-se 200 pontos ao explodi-la. Surge em uma posi√ß√£o vertical aleat√≥ria e seu movimento √© constante para a esquerda. Entra no jogo a partir do <b>n√≠vel 1</b>.
                 </p>
 
                 <img src="img/paraquedas.png" />
                 <p>
-                    <b>Paraquedas:</b> … necess·rio 1 projetil para destruir este inimigo. Ganha-se 100 pontos ao explodi-lo. Surge em uma posiÁ„o horinzotal aleatÛria e seu movimento È constante para baixo alternando de direita para esquerda. Entra no jogo a partir do <b>nÌvel 2</b>.
+                    <b>Paraquedas:</b> √â necess√°rio 1 projetil para destruir este inimigo. Ganha-se 100 pontos ao explodi-lo. Surge em uma posi√ß√£o horinzotal aleat√≥ria e seu movimento √© constante para baixo alternando de direita para esquerda. Entra no jogo a partir do <b>n√≠vel 2</b>.
                 </p>
 
                 <img src="img/tartaruga-azul.png" />
                 <p>
-                    <b>Tartaruga Azul:</b> … necess·rio 3 projeteis para destruir este inimigo. Ganha-se 500 pontos ao explodi-la. Surge em uma posiÁ„o vertical aleatÛria e seu movimento È constante para a direita alternando de cima para baixo. Entra no jogo a partir do <b>nÌvel 3</b>.
+                    <b>Tartaruga Azul:</b> √â necess√°rio 3 projeteis para destruir este inimigo. Ganha-se 500 pontos ao explodi-la. Surge em uma posi√ß√£o vertical aleat√≥ria e seu movimento √© constante para a direita alternando de cima para baixo. Entra no jogo a partir do <b>n√≠vel 3</b>.
                 </p>
 
                 <img src="img/bala-canhao.png" />
                 <p>
-                    <b>Bala de Canh„o:</b> … um inimigo indestrutivel. Surge a cada 5 segundos na mesma posiÁ„o vertical que o <b>Mario Voador</b>. Seu movimento È constante para a direita. Entra no jogo a partir do <b>nÌvel 4</b>.
+                    <b>Bala de Canh√£o:</b> √â um inimigo indestrutivel. Surge a cada 5 segundos na mesma posi√ß√£o vertical que o <b>Mario Voador</b>. Seu movimento √© constante para a direita. Entra no jogo a partir do <b>n√≠vel 4</b>.
                 </p>
             </section>
             <section>
                 <h2>Itens</h2>
 
                 <p>
-                    Ao explodir seus inimigos pode ou n„o surgir itens na posiÁ„o do inimigo destruido. … sorteado aleatÛriamente qual item ir· surgir.</br>
+                    Ao explodir seus inimigos pode ou n√£o surgir itens na posi√ß√£o do inimigo destruido. √â sorteado aleat√≥riamente qual item ir√° surgir.</br>
                 </p>
 
                 <img src="img/moeda.png" />
@@ -81,12 +81,12 @@
 
                 <img src="img/cogumelo.png" />
                 <p>
-                    <b>Cogumelo:</b> Pegue este item e aumente quantidade de projeteis por disparo. A cada vez que se encosta em um inimigo a quantidade de projeiteis por disparo È diminuida.
+                    <b>Cogumelo:</b> Pegue este item e aumente quantidade de projeteis por disparo. A cada vez que se encosta em um inimigo a quantidade de projeiteis por disparo √© diminuida.
                 </p>
 
                 <img src="img/florzinha.png" />
                 <p>
-                    <b>Florzinha:</b> Pegue este item e aumente o nivel de seus projeteis. A cada vez que se encosta em um inimigo o nÌvel de seus projeiteis È diminuido.
+                    <b>Florzinha:</b> Pegue este item e aumente o nivel de seus projeteis. A cada vez que se encosta em um inimigo o n√≠vel de seus projeiteis √© diminuido.
                 </p>
 
                 <img src="img/estrela.png" />
@@ -99,10 +99,10 @@
             <section>
                 <h2>Niveis</h2>
                 <p>
-                    <b>NÌvel 1:</b> NÌvel na qual o jogo se inicia. Neste nÌvel estar· presente o seguinte inimigo: <b>Tartaruga Vermelha</b></br>
-                    <b>NÌvel 2:</b> NÌvel alcanÁado ao se acumular uma quantidade miaor ou igual a <b>2000 pontos</b>. Neste nÌvel estar„o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b> e <b>Paraquedas</b></br>
-                    <b>NÌvel 3:</b> NÌvel alcanÁado ao se acumular uma quantidade miaor ou igual a <b>6000 pontos</b>. Neste nÌvel estar„o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b>, <b>Paraquedas</b> e <b>Tartaruga Azul</b></br>
-                    <b>NÌvel 4:</b> NÌvel alcanÁado ao se acumular uma quantidade miaor ou igual a <b>15000 pontos</b>. Neste nÌvel estar„o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b>, <b>Paraquedas</b>, <b>Tartaruga Azul</b> e <b>Bala de Canh„o</b></br>
+                    <b>N√≠vel 1:</b> N√≠vel na qual o jogo se inicia. Neste n√≠vel estar√° presente o seguinte inimigo: <b>Tartaruga Vermelha</b></br>
+                    <b>N√≠vel 2:</b> N√≠vel alcan√ßado ao se acumular uma quantidade miaor ou igual a <b>2000 pontos</b>. Neste n√≠vel estar√£o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b> e <b>Paraquedas</b></br>
+                    <b>N√≠vel 3:</b> N√≠vel alcan√ßado ao se acumular uma quantidade miaor ou igual a <b>6000 pontos</b>. Neste n√≠vel estar√£o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b>, <b>Paraquedas</b> e <b>Tartaruga Azul</b></br>
+                    <b>N√≠vel 4:</b> N√≠vel alcan√ßado ao se acumular uma quantidade miaor ou igual a <b>15000 pontos</b>. Neste n√≠vel estar√£o presentes os seguintes inimigos: <b>Tartaruga Vermelha</b>, <b>Paraquedas</b>, <b>Tartaruga Azul</b> e <b>Bala de Canh√£o</b></br>
                 </p>
             </section>
 </div>
