--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright"> INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 maintained by <a href="https://github.com/codigos-aleatorios">codigos-aleatorios</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright"> Todo o conteúdo  de 'INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5' foi desenvolvido para fins educacionais</p>
+         
       </footer>
     </div>
 
