--- a/slides/index.html
+++ b/slides/index.html
@@ -100,7 +100,7 @@
 
         <div class="reveal">
             <div id="tempoHTML"></div>
-            <div class='font8Bit' style="font-size:15px;padding:5px;text-align:right"> <a target="_blank" href="http://git.io/jogosHTML5">http://git.io/jogosHTML5</a></div>
+                       <div class='font8Bit' style="font-size:15px;padding:5px;text-align:right"> <a target="_blank" href="http://git.io/HTML5jogos">http://git.io/HTML5jogos</a></div>
             <div class="slides">
                 <!--  ############################################################################## -->
                 <section >
