--- a/slides/index.html
+++ b/slides/index.html
@@ -85,6 +85,9 @@
                        left:0;
                        z-index:999999;
             }
+			p{
+			text-align:justify;
+			}
         </style>
 
         <script>
@@ -146,43 +149,36 @@
                     <section>
                         <h2>Introdução ao HTML5</h2>
 
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-
-                        <pre><code data-trim  >
-function oi(   ) {
- alert(22222); 
-}
-					</code></pre>
-                        aaaaaaaaaaaaaaaaaaaaaaaaa<br />
-                        aaaaaaaaaaaaaaaaaaaaaaaaa<br />
-                        aaaaaaaaaaaaaaaaaaaaaaaaa<br />
-                        aaaaaaaaaaaaaaaaaaaaaaaaa<br />
+						 <p>
+						
+                        O HTML é uma linguagem de marcação  para apresentação de conteúdo WEB.Atualmente o HTML se encontra na versão 5,
+						 nela foi adicionado mais tags semánticas(header,nav,footer, section e etc),e outras novas tags, vários recursos interessantes que antes só era possível com ajuda de plugins proprietários.
+						 Estes recursos implementam suporte à conteúdo multimídia (áudio e vídeo), manipulação de imagens bitmap(canvas) e imagens vetoriais (SVG), aplimoramento offline, Websockets entre outras coisas.
+						 
+					    </p>
 
                     </section>
 
                     <section>
-                        <h2>vertical </h2>
+                        <h2>Estrutura básica </h2>
+<pre>
+<code>
+&lt;!doctype html&gt;
+&lt;html lang="pt-br"&gt;
+    &lt;head&gt;
+        &lt;meta charset="utf-8"&gt;
+		&lt;title&gt;teste b&lt;/title&gt;
+	&lt;/head&gt;
+	&lt;body&gt;  olá mundo &lt;/body&gt;
+&lt;/html&gt;
+</code>
 
-                        bbbbbbbbbbbbbbbbb
 
-                        aaaaaaaaaaaaabaaaaaaaaaaaa<br />
-                        aaaaaaaaaaabaaaaaaaaaaaaaa<br />
-                        aaaaaaaaaaabaaaaaaaaaaaaaa<br />
-
-                    </section>
-
-
-                    <section>
-                        <h2>vertical </h2>
-
-                        bbbbbbbbbbbbbbbbb
-
-                        aaaaaaaaaaaaabaaaaaaaaaaaa<br />
-                        aaaaaaaaaaabaaaaaaaaaaaaaa<br />
-                        aaaaaaaaaaabaaaaaaaaaaaaaa<br />
+</pre>
 
                     </section>
+
+ 
                 </section>
                 <!--  ############################################################################## -->
 
