--- a/slides/index.html
+++ b/slides/index.html
@@ -553,8 +553,22 @@ console.log(coordenada.pageX) ;
 
 
 
+                <section>
+                    <h2> JOGOS</h2> 
+                    <img src="img/mario.png"   /> 
+                </section>
 
+                <section>
+                    <h2> Conceitos e técnicas</h2> 
+                    <ul>
 
+                        <li class="fragment">cccc</li>
+                        <li class="fragment">cccc</li>
+                        <li class="fragment">cccc</li>
+                        <li class="fragment">cccc</li>
+
+                    </ul>
+                </section>
 
 
 
