--- a/slides/index.html
+++ b/slides/index.html
@@ -896,7 +896,7 @@ window.requestAnimationFrame = (function() {
 						<section>
 							<h2>Movimentação Baseada em FPS</h2>
 							<p>
-								Um carro  movimenta-se em quilometros por hora, em cavas o movimento basea-se em pixels por segundo, logo temos:
+								Um carro  movimenta-se em quilometros por hora, em canvas o movimento basea-se em pixels por segundo, logo temos:
 							</p>
 							<pre>
 								<code>
