--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       <section id="main_content" class="inner">
         <h1>INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </h1>
 
+		
+		<p>
+		Slides: .....<br />
+		
+		Jogo Super Mario Míssil Attack: .....
+		</p>
+		
+		
+		
+		
 <p>Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </p>
 
 <p>Desenvolvido por:</p>
