--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 		
 		<p>
-		Slides: .....<br />
-		
-		Jogo Super Mario Míssil Attack: .....
+				Slides: <a href="http://codigos-aleatorios.github.io/jogosHTML5/MarioMissilAttack/index.html"></a>[Ver Slides]<br />
+
+				Jogo desenvolvido: <a href="http://codigos-aleatorios.github.io/jogosHTML5/slides/index.html"></a>[Jogo Super Mario Míssil Attack]<br />
 		</p>
 		
 		
