--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </h1>
+       
 
 		
 		<p>
@@ -42,14 +42,16 @@
 		
 		
 		
-		
-<p>Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </p>
+			<div style="padding:4px;background-color:#fafafa">
+			<p>Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </p>
 
-<p>Desenvolvido por:</p>
+			<p>Desenvolvido por:</p>
 
-<p>Heberth Jorge Feres /  <a href="https://twitter.com/fereshj">@fereshj </a></p>
+			<p>Heberth Jorge Feres /  <a href="https://twitter.com/fereshj">@fereshj </a></p>
 
-<p>Victor Hugo de Paiva Gonçales /<a href="https://twitter.com/victorvhpg">@victorvhpg</a></p>
+			<p>Victor Hugo de Paiva Gonçales /<a href="https://twitter.com/victorvhpg">@victorvhpg</a></p>
+
+			</div>
       </section>
     </div>
   
