--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/codigos-aleatorios/jogosHTML5">View on GitHub</a>
 
           <h1 id="project_title"> INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5</h1>
-          <h2 id="project_tagline">Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 - por Victor / Heberth</h2>
+          <h2 id="project_tagline"> por Victor / Heberth</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/codigos-aleatorios/jogosHTML5/zipball/master">Download this project as a .zip file</a>
@@ -43,7 +43,7 @@
 		
 		
 			<div style="padding:4px;background-color:#fafafa">
-			<p>Conteúdo INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </p>
+			<p> INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </p>
 
 			<p>Desenvolvido por:</p>
 
