--- a/MarioMissilAttack/index.html
+++ b/MarioMissilAttack/index.html
@@ -88,8 +88,7 @@ Desenvolvido por:
 
             Heberth Jorge Feres / <a href="http://www.twitter.com/fereshj">@fereshj</a>    <br />
             Victor Hugo de Paiva Goncales / <a href="http://www.twitter.com/victorvhpg">@victorvhpg</a></br>			
-			Jogo desenvolvido para fins didaticos como parte da Semana de Computação e Informatica Unoeste / FIPP a <a href="http://www.unoeste.br/fipp/infoeste/25info/default.asp" target="_blank">25ª Infoeste</a>
-
+			Jogo desenvolvido para fins didaticos como parte da Semana de Computação e Informatica Unoeste / FIPP a <a href="http://www.unoeste.br/fipp/infoeste/25info/default.asp" target="_blank">25ª Infoeste</a>.
         </div>
     </body>
 </html>
