--- a/MarioMissilAttack/index.html
+++ b/MarioMissilAttack/index.html
@@ -42,11 +42,7 @@ Desenvolvido por:
     <body>
         <div id="carregando"></div>
 
-
-        <div  id="imgInicio">
-            <img src="img/splash.jpg"  />
-
-        </div>
+ 
 
         <div id="jogoCanvas"  class="insideCenter">
             <div class="insideCenter">
@@ -62,17 +58,17 @@ Desenvolvido por:
                 </div>
 
                 <div  >
-					<div>
-						Escala: <input type="range"  value="2" step="0.1"   min=".3" max="5" id="btnEscala"/>  <label id="escalaTexto">2</label>
-					</div>
-				   <div>
-						<button  id="btnPause" >PAUSE</button> 
-						<button  id="btnAudio" >Sem Audio</button>
-                   </div>
+                    <div>
+                        Escala: <input type="range"  value="2" step="0.1"   min=".3" max="5" id="btnEscala"/>  <label id="escalaTexto">2</label>
+                    </div>
+                    <div>
+                        <button  id="btnPause" >PAUSE</button> 
+                        <button  id="btnAudio" >Tirar Audio</button>
+                    </div>
                 </div>
-				<div>
-					<a href="instrucoes.html" target="_blank">Instruções</a>
-				</div>
+                <div>
+                    <a href="instrucoes.html" target="_blank">Instruções</a>
+                </div>
             </div>
             <div style="clear: both"></div>
 
@@ -88,7 +84,7 @@ Desenvolvido por:
 
             Heberth Jorge Feres / <a href="http://www.twitter.com/fereshj">@fereshj</a>    <br />
             Victor Hugo de Paiva Goncales / <a href="http://www.twitter.com/victorvhpg">@victorvhpg</a></br>			
-			Jogo desenvolvido para fins didaticos como parte da Semana de Computação e Informatica Unoeste / FIPP a <a href="http://www.unoeste.br/fipp/infoeste/25info/default.asp" target="_blank">25ª Infoeste</a>.
+            Jogo desenvolvido para fins didaticos como parte da Semana de Computação e Informatica Unoeste / FIPP a <a href="http://www.unoeste.br/fipp/infoeste/25info/default.asp" target="_blank">25ª Infoeste</a>.
         </div>
     </body>
 </html>
