--- a/MarioMissilAttack/instrucoes.html
+++ b/MarioMissilAttack/instrucoes.html
@@ -1,4 +1,21 @@
- <div id="instrucoes" class="insideCenter">
+<!--
+Desenvolvido por:
+  Heberth Jorge Feres / @fereshj  
+  Victor Hugo de Paiva Goncales / @victorvhpg 
+
+ 
+-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta  charset="utf-8">
+        <title>jogo </title>
+ 
+
+
+
+    </head>
+    <body> <div id="instrucoes" class="insideCenter">
             <section>
                 <h2>Objetivo do Jogo</h2>
                 <p>
@@ -106,3 +123,5 @@
                 </p>
             </section>
 </div>
+    </body>
+</html>
