--- a/slides/index.html
+++ b/slides/index.html
@@ -1065,7 +1065,7 @@ var movimento= velocidade / FPS;
 					                    <section>
                         <h2> Super Mario Míssil Attack</h2>
 
-                        <a href="http://codigos-aleatorios.github.io/jogosHTML5/MarioMissilAttack/index.html/"  >Super Mario Míssil Attack </a><br >
+                        <a href="http://codigos-aleatorios.github.io/jogosHTML5/MarioMissilAttack/index.html"  >Super Mario Míssil Attack </a><br >
                        <img src="img/mario.png"   /> 
 
 
