adicionando acesso WEBSOCKET ao slide sendo cliente

--- a/slides/index.html
+++ b/slides/index.html
@@ -1194,6 +1194,7 @@ var movimento= velocidade / FPS;
 			
             // https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
+			  keyboard: controls,
                 controls: controls,
                 progress: true,
                 history: true,
