adicionando acesso WEBSOCKET ao slide sendo cliente

--- a/slides/index.html
+++ b/slides/index.html
@@ -1065,7 +1065,7 @@ var movimento= velocidade / FPS;
 					                    <section>
                         <h2> Super Mario Míssil Attack</h2>
 
-                        <a href="http://codigos-aleatorios.github.io/jogosHTML5/MarioMissilAttack/index.html"  >Super Mario Míssil Attack </a><br >
+                        <a href="http://codigos-aleatorios.github.io/jogosHTML5/MarioMissilAttack/index.html/"  >Super Mario Míssil Attack </a><br >
                        <img src="img/mario.png"   /> 
 
 
@@ -1178,7 +1178,7 @@ var movimento= velocidade / FPS;
 						return !!document.body.classList;
 					}}               
 
-			];
+			]; 
 				
 			if(cliente){
 			    controls= false;
@@ -1194,6 +1194,7 @@ var movimento= velocidade / FPS;
 			
             // https://github.com/hakimel/reveal.js#configuration
             Reveal.initialize({
+			  keyboard: controls,
                 controls: controls,
                 progress: true,
                 history: true,
