--- a/MarioMissilAttack/index.html
+++ b/MarioMissilAttack/index.html
@@ -87,7 +87,7 @@ Desenvolvido por:
             Ver + em : <a href="http://codigos-aleatorios.github.io/jogosHTML5/">INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5 </a>
 			 <br/>
 			
-            Jogo desenvolvido para fins educacionais, para o minicurso de 'INTRODUÇÃO AO DESENVOLVIMENTO DE JOGOS COM HTML5' da Semana de Computação e Informática Unoeste / FIPP a <a href="http://www.unoeste.br/fipp/infoeste/25info/default.asp" target="_blank">25ª Infoeste</a>.
+            Jogo desenvolvido para fins educacionais.
         </div>
     </body>
 </html>
