--- a/slides/index.html
+++ b/slides/index.html
@@ -656,6 +656,14 @@ console.log(coordenada.pageX) ;
                     </section>
 
 
+     <section>
+                        <h2>Folha de Sprites</h2> 
+                        
+                        <p>
+                            Sprites prontas
+							<a href="http://spriters-resource.com/snes/" target="_blank" >http://spriters-resource.com/snes/</a>
+                        </p>
+                    </section>
 
 
 
@@ -1107,6 +1115,8 @@ var movimento= velocidade / FPS;
                             <li><a  href="https://developer.mozilla.org/en-US/docs/HTML/Canvas/Tutorial">Mozilla </a></li>
 
                             <li><a  href="http://www.w3.org/TR/2dcontext/">W3C </a></li>
+							  <li><a  href="http://jlongster.com/Making-Sprite-based-Games-with-Canvas"> Making Sprite based Games </a></li>
+							
                             <li><a  href="http://www.html5canvastutorials.com/">html5canvastutorials </a></li>
 
                         </ul>
