link do site exemplo

--- a/slides/index.html
+++ b/slides/index.html
@@ -1116,6 +1116,7 @@ var movimento= velocidade / FPS;
 
                             <li><a  href="http://www.w3.org/TR/2dcontext/">W3C </a></li>
 							  <li><a  href="http://jlongster.com/Making-Sprite-based-Games-with-Canvas"> Making Sprite based Games </a></li>
+							    <li><a  href="http://www.lostdecadegames.com/how-to-make-a-simple-html5-canvas-game/">  Make a simple HTML5 Canvas game </a></li>
 							
                             <li><a  href="http://www.html5canvastutorials.com/">html5canvastutorials </a></li>
 
